Disable deprecation warnings for CMake on the CI runners
- Recent versions of CMake changed some deprecation policies
- A _lot_ of noise was introduced as a result

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -202,6 +202,7 @@ jobs:
         if: ${{ ! inputs.test-suite }}
         run: |
           cmake "${{ github.workspace }}" \
+            -Wno-deprecated \
             -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" \
             -DTRACY_ENABLE="${{ matrix.build-type == 'RelWithDebInfo' && 'ON' || 'OFF' }}" \
             ${{ inputs.cmake-args }}
@@ -211,6 +212,7 @@ jobs:
         if: ${{ inputs.test-suite }}
         run: |
           cmake "${{ github.workspace }}" \
+            -Wno-deprecated \
             -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" \
             -DTRACY_ENABLE="${{ matrix.build-type == 'RelWithDebInfo' && 'ON' || 'OFF' }}" \
             -DBUILD_TESTING=ON \
