Add a comment to CMakeLists.txt
- Really just an excuse to trigger the CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ option(BUILD_TESTING "Build test suite." OFF)
 include(CTest)
 
 # iOS/tvOS want the library built SHARED, other platforms have been happy with MODULE
+# And I don't want to tempt fate, hence the option
 option(BUILD_AS_SHARED_LIBRARY "Allow for both linking and loading" OFF)
 
 add_subdirectory(src/libretro)
