--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -99,6 +99,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request && github.event.pull_request.head.sha || github.sha }}
+          persist-credentials: false
 
       - name: Install GCC Problem Matcher
         uses: root-project/gcc-problem-matcher-improved@c45ac8b7c1589268fdef2f7f5772375aa96ab210
@@ -172,6 +173,7 @@ jobs:
           repository: "${{ secrets.TESTFILE_REPO }}"
           token: "${{ secrets.TESTFILE_REPO_TOKEN }}"
           path: "testfiles"
+          persist-credentials: false
 
       - name: Prepare Test Files
         if: ${{ inputs.test-suite && steps.cache-test-files.outputs.cache-hit != 'true' }}
