--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -166,7 +166,12 @@ jobs:
         id: restore-test-files
         uses: actions/cache/restore@v4
         with:
-          path: "${{ github.workspace }}/testfiles"
+          path: |
+            ${{ github.workspace }}/testfiles
+            !${{ github.workspace }}/testfiles/.git
+            !${{ github.workspace }}/testfiles/*.7z
+          restore-keys: |
+            testfiles
           key: ${{ inputs.testfiles-cache-key }}
           enableCrossOsArchive: true
 
