Add some test cases to ensure the host microphone is off at the appropriate time

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -293,6 +293,7 @@ include(cmake/Booting.cmake)
 include(cmake/Cheats.cmake)
 include(cmake/Errors.cmake)
 include(cmake/Firmware.cmake)
+include(cmake/Microphone.cmake)
 include(cmake/Reset.cmake)
 include(cmake/Screen.cmake)
 include(cmake/Slot2.cmake)
