--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -33,6 +33,8 @@ add_library(melondsds_libretro ${LIBRARY_TYPE}
     config/types.hpp
     config/visibility.hpp
     config/visibility.cpp
+    console/dsi.cpp
+    console/dsi.hpp
     constants.hpp
     core/core.cpp
     core/core.hpp
