Temporarily disable LTO on some workflow runners until GCC 15's regression is resolved
- See https://github.com/msys2/MINGW-packages/issues/24152

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -84,7 +84,8 @@ jobs:
       shell: msys2 {0}
       test-suite: true
       testfiles-cache-key: ${{ needs.fetch-testfiles.outputs.testfiles-cache-key }}
-      cmake-args: -DENABLE_SCCACHE=ON -DSCCACHE="C:/Users/runneradmin/.cargo/bin/sccache.exe"
+      cmake-args: -DENABLE_SCCACHE=ON -DSCCACHE="C:/Users/runneradmin/.cargo/bin/sccache.exe" -DENABLE_LTO_RELEASE=OFF
+      # Temporarily disable LTO until a regression in GCC 15 is resolved https://github.com/msys2/MINGW-packages/issues/24152
       cmake-config: "${{ matrix.config }}"
     secrets:
       TESTFILE_REPO_TOKEN: ${{ secrets.TESTFILE_REPO_TOKEN }}
