--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -233,7 +233,7 @@ jobs:
       core-name: melondsds_libretro_android
       archive-name: melondsds_libretro-android
       cmake-config: "${{ matrix.config }}"
-      cmake-args: -DENABLE_OGLRENDERER=OFF -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=24 -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK/build/cmake/android.toolchain.cmake"
+      cmake-args: -DENABLE_OGLRENDERER=OFF -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=24 -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK/build/cmake/android.toolchain.cmake" -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON
       runs-on: ubuntu-latest
       # Disabled OpenGL on Android due to https://github.com/JesseTG/melonds-ds/issues/23
 
